# modorganizer-overlayfs

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml  linting.yml
cmake/: config.cmake.in
include/overlayfs/: logging.h  overlayfsmanager.h
src/: overlayfsmanager.cpp
